proofread report, need to check conclusion, abstract, final design sections

--- a/Report/final_report.tex
+++ b/Report/final_report.tex
@@ -146,9 +146,9 @@ The portion of the hardware that needed to be developed as part of this project 
 The phototransistor can be configured in two ways: common emitter or common collector. For this design the common base configuration was not viable as the base of the transistor was unable to be connected to the circuit. In the common collector configuration, the output signal was very flat $(Black: V_{avg} = 2.58V, V_{Pk-Pk} = 0.05V, White: V_{avg} = 2.74V, V_{Pk-Pk} = 0.10V)$ and difficult to differentiate between the black and white lines. On the other hand in the common emitter configuration, there was a sharp difference between the black and white lines $(Black: V_{avg} = 4.09V, V_{Pk-Pk} = 0.09V, White: V_{avg} = 2.84V, V_{Pk-Pk} = 1.54V)$. As a result, a decision was made to use the common emitter configuration for the light sensors.
 \subsection{Circuitry}
 
-There were two main concerns in the phototransistor output signal that was to be resolved by the circuitry; these being the removal of the DC offset in the signal, and the filtering of noise. The DC offset needed to be removed as this varied depending on projector brightness in various parts of the map \& external lighting. The projector to be used for this project has a refresh rate of 120Hz, while the ambient light source in the laboratory has a refresh rate of 100Hz. Therefore, a high pass filter with a cut-off less than 120Hz was necessary for this project. In this regard, the group's decision was to implement a RC High Pass filter with a cut-off frequency of 106Hz.
+There were two main concerns in the phototransistor output signal that was to be resolved by the circuitry; these being the removal of the DC offset in the signal, and the filtering of noise. The DC offset needed to be removed as this varied depending on projector brightness in various parts of the map \& external lighting. The projector to be used for this project has a refresh rate of 120Hz, while the ambient light source in the laboratory has a refresh rate of 100Hz. Therefore, a high pass filter with a cut-off less than 120Hz was necessary for this project. In this regard, the group's decision was to implement a RC High Pass filter with a cut-off frequency of 106Hz. This filtered signal was then fed through a non-inverting amplifier with a gain of approximately 20, to further differentiate between black and white projector light readings, and to be used in the next stage of the analogue circuitry. 
 
-The next design aspect that needed to be considered was how the signal would be passed into the PSoC, in digital or analogue form. If the signal were to be passed in as an analogue signal, the PSoC must sample the signal and process this into a binary output (black or white) at a rate fast enough for the robot to accurately follow the line. Alternatively, a hardware Schmitt Trigger could be used on the output signal to create a digital binary output which can be read from the PSoC digital input pins. This solution would process the information into what is relevant to in real time. After much thought and weighting of the pros and cons, a decision was reached to use a Schmitt Trigger and process the signal into a digital signal to be passed into the PSoC.
+The next design aspect that needed to be considered was how the signal would be passed into the PSoC, in digital or analogue form. If the signal were to be passed in as an analogue signal, the PSoC must sample the signal and process this into a binary output (black or white) at a rate fast enough for the robot to accurately follow the line. Alternatively, a hardware Schmitt Trigger could be used on the output signal to create a digital binary output which can be read from the PSoC digital input pins. This solution would process the information into what is relevant to in real time. After much thought and weighing of the pros and cons, a decision was reached to use a Schmitt Trigger and process the signal into a digital signal to be passed into the PSoC.
 
 \subsection{Light sensor array and robot orientation}
 
@@ -174,7 +174,7 @@ Other considerations for the PCB design included the routing of the pins to the 
 
 Two bi-polar switches that are easy to operate were used as power on/off switches for the board and localization LEDs. This decision was made as it allowed both the PCB and the localization LEDs to be individually turned on and off. This was important when sharing the maze with other groups' robots without interference. Additionally, two 2-DIP switches were added to enable easy switching between the various modes and configurations of the robot.
 
-Connecting the H-bridges via traces would result in a cleaner design with no rogue wires, but would come at the expense of having more long pins connecting the PCB to the daughterboard, which would cause additional difficulty when assembling the two together. A decision was made to connect via traces as it was realized that the board need not be connected together many times and that this small inconvenience was well worth the much tidier robot connections.
+Connecting the H-bridges via traces would result in a cleaner design with no rogue wires, but would come at the expense of having more long pins connecting the PCB to the daughterboard, which would cause additional difficulty when assembling the two together. A decision was made to connect via traces as it was realized that the board need not be connected together many times and that this small inconvenience was well worth the much tidier robot connections. The PCB was designed using the `Rooms' feature in Altium Designer to minimize development time for identical circuits, as there was one circuit for each light sensor.
 
 \subsection{Testing and Verification}
 
@@ -188,7 +188,7 @@ During the verification stage of the sensor layout, it was found that the sensor
 
 \subsection{Final Design}
 
-The final analogue circuit design used the light sensor phototransistors in the common emitter configuration. This signal was then filtered using a simple RC high pass filter and gain stages followed by a peak detector and Schmitt trigger circuit. This yielded an accurate output of logic HIGH for on the line and logic LOW for off the line. The PCB was designed using the `Rooms' feature in Altium Designer to minimize development time for identical circuits. The PCB used SMD components to minimize board usage and fit all the required components in the given area.
+The PCB was designed and assembled using SMD components to minimize board usage and fit all the required components in the given area. The final analogue circuit design used the light sensor phototransistors in the common emitter configuration. This signal was then filtered using a simple RC high pass filter and gain stages followed by a peak detector and Schmitt trigger circuit. This yielded an accurate output of logic HIGH for on the line and logic LOW for off the line.
 
 %----------------------------------------------------------------------------------------
 %	DIGITAL SECION
@@ -197,65 +197,65 @@ The final analogue circuit design used the light sensor phototransistors in the 
 
 \section{Digital}
 
-The majority of the project that needed to be developed was part of the digital section, this was implemented in C for execution on the PSoC 5LP used in this project. This portion of the project needed to take in inputs from RF data, Quadrature decoder readings and light sensor data coming from the analogue section of this project. These inputs need to be processed in such a way that the robot knows where it is currently at. 
+The majority of development that took place for the successful completion of this project was digital. This implementation took place using C for execution on the PSoC 5LP. The inputs used to implement the robot line following and maze traversing logic came from RF data, quadrature decoder readings, and light sensor data. 
 
-Along with the path finding algorithms used in this project, the robot should be able to move to next target location using the shortest path. For level 1 this means traversing the entire map in the minimum amount of moves and for level 2, this means collecting the pre-specified food pallets in the shortest number of movements. This section of the report covers the findings and design considerations that were made while these solutions were developed.
+Alongside the path finding algorithms used in this project, the robot should be able to move to next target location using the shortest path. For level 1 this meant traversing the entire map in the shortest distance, and for level 2, this meant collecting the pre-specified food pellets in the shortest distance between pellets. This section of the report covers the findings and design considerations that were made while these solutions were developed.
 
 \subsection{Path Finding Algorithms}
 
-There are numerous ways to find the shortest path to a particular location in a maze, of these we considered the Depth First Search (DFS) \& A* algorithms.
+There were numerous ways to find the shortest path to a particular location in a maze, of these Depth First Search (DFS) and A* algorithms were considered. Both these algorithms were used for pacman level 1 however only A* was used for level 2. 
 
-When trying to reach the target, DFS navigates by following a path till the depth is reached, then traverses backwards till the previous intersection then choosing the next undiscovered path. For this purpose a maze can be modelled as a tree with nodes in it. Each intersection on the maze can be considered a node. This algorithm can be implemented using recursion or iteration. There are a few issues with this method: it doesn't find the shortest path, if loops exist additional marking is necessary to solve and most importantly it often leads to suboptimal performance because it doesn't prioritise direction based on the goal.
+When attempting to reach the target location, DFS navigated by following a path until the depth of the path was reached, and then traversing backwards until the previous intersection after which it chose the next undiscovered path. For this purpose a maze can be modelled as a tree with nodes in it where each intersection on the maze can be considered a node. This algorithm could have been implemented using recursion or iteration. A few issues with this method included, it did not find the shortest path, if loops existed additional marking was necessary to solve, and most importantly it often lead to suboptimal performance because it did not prioritise direction based on the goal.
 
-On the other hand the A* algorithm is a much better transversal algorithm in most cases. Given a start \& end position, A* prioritises which nodes to discover by using heuristics to estimate how far the node is from the goal. It then continues the search from where it thinks is closest to the goal. We have decided to use the Manhattan heuristic in our implementation. Manhattan distance is the distance between two points on a grid assuming strictly horizontal or vertical movements and the absence of objects.
+On the other hand, the A* algorithm was a much better transversal algorithm in most cases. Given a start and end position, A* prioritised which nodes to discover by using heuristics which estimated how far the node was from the goal. After which the search continued from where it thought was the closest to the goal. The Manhattan heuristic was used in the implementation as it provided the distance between two points on a grid assuming strictly horizontal or vertical movements and the absence of objects.
 
-We also found that often in multipath mazes where there is more than one path to the destination, finding the shortest path can take longer due to backtracking. In these cases it is usually better to just continue on a chosen path then to traverse back a large distance to get the shortest path.
+It was also found that often in multipath mazes where there was more than one path to the destination, finding the shortest path could take longer due to backtracking. In these cases it was usually better to continue on the chosen path than to traverse back a large distance to get the shortest path.
 
 \subsection{Motor Control \& PID}
 
-When designing the motor control of the robot, there were two different ways to set this up. The H-Bridge used in the design of this robot has two Input Pins, Enable Pin, two disable pins \& slew rate pin of particular interest. Of these the slew rate pin must be high for a fast slew rate response of the H bridge, with the pin being low by default. We decided to keep this pin high to set the h bridge in high slew rate mode as there were no obvious disadvantages to this and it meant quicker response times for robot operation.
+There were two different ways to design the motor control of the robot. The pins of interest in the H-Bridge used in the design of this robot were the two input pins, an enable pin, two disable pins \& slew rate pin. Of these the slew rate pin must be high for a fast slew rate response of the H bridge. The pin is low by default. It was decided to keep this pin high to set the H bridge in high slew rate mode as there were no obvious disadvantages to this and it meant quicker response times for robot operation.
 
-Any one of the input pins, enable pins or disable pins can be used to modulate the power going to the motors and control the motor speed. At the time of development, we were unaware of the flexibility of this and choose to go with what we thought was most logical, that being keeping the enable and disable pins constant and pulse wave modulating the input pins. Looking back at this now, we can see that there are no major advantages to one method over another.
+Any one of the input pins, enable pins or disable pins can be used to modulate the power going to the motors and control the motor speed. At the time of development, the flexibility of this was unbeknownst. Hence, the decision was made to keep the enable and disable pins constant and pulse wave modulate the input pins. This seemed to be the most logical option. Looking back at this now, it can be seen that there are no major advantages to one method over the other.
 
 \subsection{Motion Control \& Line Following}
 
-For the robot to autonomously line follow, there are three sources of information for the robot: RF localization data, Quadrature Decoder Readings, Light Sensors. Of these, it was found during the course of the project that the RF localization data was very unreliable and very hard to use.
+For the robot to autonomously line follow, there are three sources of information for the robot: RF localization data, quadrature decoder readings, and light sensors. Of these, it was discovered during the course of the project that the RF localization data was very unreliable and very hard to use.
 
-Quadrature decoder readings allow us to see the distance that the robot's wheels have travelled over a certain time period. This allows us to track the speed and distance travelled of the robot. Relying solely on quadrature readings for navigating the maze was considered and explored. It was found that the concave shape of the projector lens resulted in the sizes of a grid being different depending on the part of the maze the robot is in. This lead us to make the decision to not use the quadrature readings as the primary source of information for following the lines.
+Quadrature decoder readings allowed us to see the distance that the robot's wheels have travelled over a certain time period. This allowed us to track the speed of and distance travelled by the robot. Relying solely on quadrature readings for navigating the maze was considered and explored. It was found that the concave shape of the projector lens resulted in the sizes of a grid being different depending on the part of the maze the robot is in. This resulted in the decision to not use the quadrature readings as the primary source of information for following the lines.
 
-The data coming from the light sensors were much more reliable and were the primary source of information used by the robot to make decisions on how to move. As much of the processing of the light sensor data is done in the analogue domain, it was sufficient to just read the pins current voltage level.
+Comparatively, the light sensor data was the most reliable and in the end was the primary source of information used by the robot to make decisions on how to move. As much of the processing of the light sensor data was done in the analogue domain, it was sufficient to just read the pins current voltage level.
 
-Two methods of maze traversal were considered by the group: moving one grid at a time and moving one intersection at a time. Both methods presented many challenges and advantages.
+Two methods of maze traversal were considered by the group: moving one grid coordinate at a time and moving one intersection at a time. Both methods presented their own challenges and advantages.
 
-Moving one grid at a time allowed more finer control as to how the robot traverses the maze and allows us to interleave the maze solving and robot movements at greater level. The main disadvantage with this method is that it is impossible to interpret when grid spaces finish using light sensors and we must therefore rely on quadrature readings/ RF data to ascertain this. Due to the reasons mentioned above, this made this method almost impossible.
+Moving one grid at a time allowed more finer control over how the robot traversed the maze and would allow maze solving and robot movements to be interleaved my closely. The main disadvantage with this method was that it was impossible to interpret when grid spaces finish using light sensors, meaning that quadrature sensors and RF data would solely be relied up to ascertain this. Due to the reasons mentioned above, this made this method inviable for the project.
 
-However when moving one intersection at a time, the light sensors are able to very accurately and precisely detect and stop the robot at each intersection. This method also simplified coding as less instructions need to be made to traverse any particular maze. As the food pallets were to be placed at locations that are not intersections, relying on only this method will always lead to not taking the shortest path. As a result a mixture of these two methods were used with the robot moving intersection to intersection untill the final stretch where it moves grid by grid.
+Contrastingly, when moving one intersection at a time, the light sensors are able to very accurately and precisely detect and stop the robot at each intersection. This method also simplified coding as less instructions needed to be made to traverse any particular maze. As the food pellets were to be placed at locations that are not intersections, relying on only this method will always lead to not taking the shortest path. As a result a mixture of these two methods were used with the robot moving intersection to intersection until the final stretch where it moves grid by grid.
 
 \subsection{RF \& Bluetooth}
 
-RF and Bluetooth are two methods of wireless communication that the robot can interface with. With RF communication, the serial stream coming from the projector control computer can be received in binary form as a C Struct or a space separated ASCII string. The ASCII string is human readable and easier to work with initially, however the processing time required to convert this into something usable is much greater than for receiving and storing the binary C Struct. The coding required to achieve this is more tedious and repetitive but much easier than the binary method. As a result of weighing both sides, we decided to use the binary form C Struct method of RF reception.
+RF and Bluetooth are two methods of wireless communication that the robot can interface with. The serial RF stream coming from the projector control computer can be received in binary form as a C Struct or a space separated ASCII string. The ASCII string is human readable and easier to work with initially, however the processing time required to convert this into something usable is much greater than for receiving and storing the binary C Struct. The coding required to achieve this is more tedious and repetitive but much easier than the binary method. As a result of weighing both sides, it was decided to use the binary form C Struct method of RF reception.
 
-The Bluetooth module used enabled bi-direction wireless communication between the robot and a computer. This present numerous opportunities, a few of which were explored in this project. The possibility of Bluetooth boot loading the PSoC was on of the more ambitious ideas that was considered. After setting this up, it was found that it took 45+ seconds to download the program to the PSoC over Bluetooth and it was prone to cut-outs due to signal loss. Due to this, this possibility was not explored any further and was not used in the final project.
+The Bluetooth module used enabled bi-direction wireless communication between the robot and a computer. This presented numerous opportunities, a few of which were explored in this project. The possibility of Bluetooth boot loading the PSoC was one of the more ambitious ideas that was considered. After setting this up, it was found that it took 45+ seconds to download the program to the PSoC over Bluetooth and it was prone to cut-outs due to signal loss. Due to this, this possibility was not explored any further and was not used in the final project.
 
 Other uses of the Bluetooth module including passing in input arguments for particular modes of operations, outputting status information about the robot and using this as a channel for debugging. These options were well used and were critical to saving a lot of development time and keeping the final project flexible.
 
 \subsection{Data Structures}
 
-There is a large amount of data that is being collected and processed by the robot while in operation. Although primitive data types can be used to store and process this data, this is not the ideal situation for execution or for the programmer. The use of data structures was an essential part of this project to ensure that the data being used is stored in an organized manner and can be used as efficiently as possible. 
+There was a large amount of data that was being collected and processed by the robot while in operation. Although primitive data types can be used to store and process this data, this was not ideal for execution or for the programmer. The use of data structures was an essential part of this project to ensure that the data being used was stored in an organized manner, and allowed to be used as efficiently as possible. 
 
-As we are programming a microcontroller and we are thus trying to keep memory usage and data usage low, the uses of complex data structures like linked lists and classes were avoided. This is because they added significant overhead that was not seen as worthy. Data structures that were used in this project include arrays and structs.
+Programming a microcontroller was a primary aspect of the digital design of this project, hence some key design criteria were to keep memory and data usage low. The uses of complex data structures like linked lists and classes were avoided. This was because they added significant overhead that was not seen as worthy. Data structures that were used instead were arrays and structs.
 
-One dimensional and two dimensional arrays were extensively in the line following algorithms used in the project. They were used to effectively and efficiently store and access the map data, the path the robot has taken, the path the robot should take, where the food pallets are located, etc. Structs were used to receive and access the RF data coming from the project control PC, so as to track the current robot position accurately.
+One dimensional and two dimensional arrays were used extensively in the line following algorithms used in this project. They were used to effectively and efficiently store and access the map data, the path the robot has taken, the path the robot should take, where the food pellets are located, etc. Structs were used to receive and access the RF data coming from the project control PC, thereby enabling accurate tracking of robot positioning.
 
 \subsection{Testing and Verification}
 
 The implementation of the two path finding algorithms were first tested using GCC \& GDB to compile and debug the code being worked on. Once this gave satisfactory results, the code was recompiled using the PSoC Creator environment and run and on the PSoC itself. This method of testing \& verification was used as the debugging tools on the PSoC environment were not as easy to use as that provided by GCC \& GDB. The only issue with this process was that sometimes, the program would use more memory than the PSoC had. To ensure this didn't cause any problems, the algorithms were developed with a low memory footprint in mind.
 
-The PID \& motor control part of the code was tested by using the Bluetooth module to send back data from the robot to the computer from the quadrature decoders and RF signal. This data was later plotted and analysed using MATLAB to verify the correct operation of the PID controller. Tuning the PID controller was quite tedious as we had to repeatedly change the tuning values, collect the data and analyse this data.
+The PID \& motor control part of the code was tested by using the Bluetooth module to send back data from the robot to the computer from the quadrature decoders and RF signal. This data was later plotted and analysed using MATLAB to verify the correct operation of the PID controller. Tuning the PID controller was quite tedious as the tuning values had to be repeatedly changed, and new data collected, before it could be analysed again.
 
 \subsection{Final Design}
 
-Both the A* and DFS algorithms were used in the final design. The A* algorithm (\Cref{fig:astar}) was used for level 2 to find the shortest path to the next food pallet. The DFS algorithm (\Cref{fig:dfs}) was used in level1 to transverse the entire map in an efficient manner. The PID controller was used in the final implementation to ensure the motor were travelling at the desired speed with minimal oscillations.
+Both the A* and DFS algorithms were used in the final design. The A* algorithm (\Cref{fig:astar}) was used for level 2 to find the shortest path to the next food pellet. The DFS algorithm (\Cref{fig:dfs}) was used in level1, with aspects of A* integrated into it to transverse the entire map in an efficient manner. The PID controller was used in the final implementation to ensure the motor wass travelling at the desired speed with minimal oscillations.
 
 %----------------------------------------------------------------------------------------
 %	CONCLUSIONS
@@ -283,7 +283,8 @@ Matlab Algorithm              & 0\%                             & 100\%         
 Pacman Algorithms             & 30\%                            & 40\%                             & 30\%                                     & 0\%                                    \\
 Benchmark Tasks               & 20\%                            & 30\%                             & 20\%                                     & 30\%                                   \\
 Project Archiving             & 55\%                            & 5\%                              & 25\%                                     & 15\%                                   \\
-Integration & 30\%                            & 0\%                              & 30\%                                     & 40\%                                   \\ \bottomrule
+Integration & 30\%                            & 0\%                              & 30\%                                     & 40\%                                   			\\
+Report				&25\%			&25\%				&25\%						&25\%			\\ \bottomrule
 \end{tabular}
 \end{table}
 
